fix: update header z-index

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -9,7 +9,7 @@
   background: var(--background-transparent);
   backdrop-filter: blur(14px);
   -webkit-backdrop-filter: blur(14px);
-  z-index: 2;
+  z-index: 1;
 }
 
 .header.opaque {
